seeder/2001-argocd/ingress.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-http-redirect
  namespace: argocd
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: ingress-system
      sectionName: http
  hostnames:
    - argocd.kubexperience.eu
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-web
  namespace: argocd
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: ingress-system
      sectionName: https
  hostnames:
    - "argocd.kubexperience.eu"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          namespace: argocd
          port: 80
          kind: Service
